--- a/block-BHaabg/style.css
+++ b/block-BHaabg/style.css
@@ -6,81 +6,81 @@
 .clearfix::after {
   clear: both;
 }
-.logo {
-    float: left;
-    width: 30%;
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 32px;
+  
+}
+.header {
+  background-color: tomato;
+  padding: 18px 0;
+  height: 72px;
+  line-height: 72px;
+}
+h1 {
+  float: left;
+}
+.city {
+  float: right;
 
 }
-.links {
-    float: right;
-    width: 70%;
-    text-align: right;
-    font-size: 23px;
-    margin: 30px 0;
+.city a {
+  margin-left: 32px;
+  text-decoration: none;
+  
+
 }
-.header,
-footer {
-    background-color: darkcyan;
-    color: white;
-    
+.article {
+  padding: 80px 0;
+
 }
-.container {
-  margin-top: 100px;
-  display: inline-blocks;
-  width: 650px;
+.para {
+  font-size: 20px;
+  line-height: 1.7;
 }
-.picture1 img,
-.picture2 img{
+.city1 {
+  float: left;
+  width: 50%;
+}
+.article-image {
+  width: 100%;
+}
+.gallery {
+  padding: 80px 0;
+}
+.city-1-3 {
+  width: 30%;
+  margin: 1.5%;
+  float: left;
+}
+.gallery img {
   width: 200px;
   height: 200px;
 }
-.city  {
-  width: 0px;
-  height: 300px;
+.city-1-3 {s
+  float: left;
+  display: inline-block;
 }
-.city1-2 {
-  float: right;
-  width: 100px;
-  height: 200px;
-  padding-right: 20%;
-}
-.city1-1 {
-  margin-left: 15%;
-    padding-right: 30px;
-    width: 35%;
-}
-.city1-2 {
-  text-align: center;
-  width: 300px;
-  height: 300px;
-  margin-right: 7%;
+.footer {
+  padding: 18px 0;
   
 }
-.picture1,
-.picture2 {
-   margin: 5%;
+.nav {
+  background-color: violet;
+  margin: 0 16px;
+  text-align: center ;
+  padding: 18px 0;
 }
-aside {
-  width: 25%;
-  float: right;
-}
-.btn {
-  background-color: cornflowerblue;
-  position: fixed;
-  bottom: 80px;
-  right: 20px;
-  height: 70px;
+.button {
+  display: inline-block;
   width: 70px;
-  border: none;
+  height: 70px;
   border-radius: 50%;
-  font-size: 20px;
-}
-.header {
-  position: fixed;
-  width: 100%;
-  top: 0;
-}
-a {
-  text-decoration: none;
-  color: white;
+  background-color: blueviolet;
+  text-transform: 30px;
+  
+  
+  
 }
